--- a/Projeto-TODO/todo/src/main/resources/application-test.properties
+++ b/Projeto-TODO/todo/src/main/resources/application-test.properties
@@ -1,16 +1,29 @@
- 
- 
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
+#### Enable H2 Console Access 
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+### Define H2 Datasource configurations
+spring.datasource.url=jdbc:h2:file:~/testdb
+spring.datasource.platform=h2
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.driver-class-name=org.h2.Driver
 
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true 
-spring.jpa.properties.hibernate.format_sql=true
+#server.port=8081
 
 
+###Enable Datasource Mysql Access
 
+#spring.datasource.username=root
+#spring.datasource.password=4451
+#spring.sql.init.platform=h2
+#spring.datasource.url=jdbc:mysql://localhost:3306/testdb
+#spring.jpa.show-sql=true 
+#
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 
