--- a/Projeto-TODO/todo/src/main/resources/application-prod.properties
+++ b/Projeto-TODO/todo/src/main/resources/application-prod.properties
@@ -1,26 +1,21 @@
 
-#### Enable H2 Console Access 
+### Enable H2 Console Access 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 ### Define H2 Datasource configurations
-spring.datasource.url=jdbc:h2:file:~/testdb
-spring.sql.init.platform=h2
+spring.datasource.platform=h2
+spring.datasource.url=jdbc:h2:file:~/prod
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true 
-#server.port=8081
-
 
 ###Enable Datasource Mysql Access
 
 #spring.datasource.username=root
 #spring.datasource.password=4451
 #spring.sql.init.platform=h2
-#spring.datasource.url=jdbc:mysql://localhost:3306/todo
+#spring.datasource.url=jdbc:mysql://localhost:3306/testdb
 #spring.jpa.show-sql=true 
 #
 #spring.jpa.hibernate.ddl-auto=update
